add:  검색 엔진 적용

--- a/_posts/2020-04-17-test-test.md
+++ b/_posts/2020-04-17-test-test.md
@@ -2,8 +2,7 @@
 layout: post
 title: "글쓰기 테스트"
 date: 2020-04-17
-author: Jekyll
-cover: "http://on2171g4d.bkt.clouddn.com/jekyll-banner.png"
+author: Eunbi
 tags: test
 ---
 
